--- a/css/style.css
+++ b/css/style.css
@@ -31,41 +31,51 @@ a:hover {
   background-color: #000000;
   font-family: Arial, Helvetica, sans-serif;
   text-transform: uppercase;
-  height: 30px;
-max-width: 972px;
+  min-height: 30px;
   font-size: 0.9em;
-  padding-left: 114px;
-  padding-right: 114px;
+}
+.s1_container {
+  max-width: 972px;
+  margin: auto;
+  /*border: solid red 1px;*/
+ 
+}
+.s1_container::after {
+  content: "";
+    clear: both;
+    display: table;
 }
 
 .s1_left {
   float: left; 
+
+
 }
 .s1_right {
   float: right;
-}
 
-.s1_phone {
-  float: left; 
+  font-size: 0;
 }
 
 .s1_currency, .s1_search, .s1_user {
- float: left;
+ /*float: left;*/
   padding-left: 10px;
   padding-right: 10px;
 }
-.s1_current_currency, .s1_caret, .s1_user_icon, .s1_current_user {
+.s1_current_currency, .s1_caret, .s1_user_icon, .s1_current_user, .s1_search_icon {
   vertical-align: middle;
 }
 
-.s1_user_icon, .s1_user_icon, .s1_caret {
+.s1_user_icon, .s1_caret, .s1_search_icon {
   max-width: 20px;
   max-height: 20px;
 }
 
 .s1_dropbtn {
+  display: inline-block;
   height: 30px;
-  background-color: #000000;
+
+  background-color: transparent;
     color: white;
 text-transform: uppercase;
     border: none;
@@ -75,7 +85,7 @@ text-transform: uppercase;
     margin-left: -1px;
 }
 
-.s1_dropbtn:first-child {
+.s1_left .s1_dropbtn {
   border: none;
 }
 
@@ -88,6 +98,8 @@ text-transform: uppercase;
   height: 30px;
   line-height: 30px;
   font-size: 0.9em;
+  border-top: solid 1px #444444;
+  clear: both;
 }
 .s1_dropdown_content_currency > ul > li {
   list-style: none;
@@ -107,21 +119,23 @@ text-transform: uppercase;
   font-size: 0.9em;
   color: white;
   display: none;
+  border-top: solid 1px #444444;
+  clear: both;
 }
-.s1_email, .s1_password, .s1_checkbox {
+.s1_email, .s1_password, .s1_checkbox, .s1_search_box {
   display: inline;
-
   margin-right: 10px;
 }
-.s1_email > input, .s1_password > input {
+.s1_email > input, .s1_password > input, .s1_search_box > input {
   border-radius: 5px;
-  border: solid 1px lightcoral;
+  border: solid 1px #ffa687;
   height: 26px;
   padding-left: 10px;
   padding-right: 10px;
+  font-size: 1em;
 }
 
-.s1_signin {
+.s1_signin, .s1_search_button {
   padding-left: 5px;
   padding-right: 5px;
   font-family: Arial, Helvetica, sans-serif;
@@ -131,9 +145,28 @@ text-transform: uppercase;
   color: white;
   border: none;
   /*border: solid 1px grey;*/
-  background-color: lightcoral;
+  background-color: #ffa687;
    cursor: pointer;
+
 }
+.s1_signin:hover, .s1_search_button:hover {
+   background-color: #fab096;
+}
+
+
+
+.s1_dropdown_content_search {
+  background-color: #000000;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 30px;
+  font-size: 0.9em;
+  color: white;
+  display: none;
+  border-top: solid 1px #444444;
+  clear: both;
+}
+
+
 
 
 
