Add styles for menu, shopping cart in section 2

--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,7 @@ a:hover {
   display: block;
 }
 
+
 /*------SECTION 2------*/
 
 .s2 {
@@ -189,24 +190,92 @@ a:hover {
   margin: auto;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1em;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
+
+.s2::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+
 .s2_logo_section {
-  display: inline-block;
+  /*display: inline-block;*/
   vertical-align: middle;
-  height: 30px;
+  height: 60px;
   width: 125px;
   background-image: url("../images/2-logo.png");
   background-position: center;
   background-repeat: no-repeat;
+  float: left;
+  line-height: 60px;
 }
 
+/*SECTION 2 MENU*/
+
 .s2_menu {
-  display: inline-block;
+  /*display: inline-block;*/
   vertical-align: middle;
+   line-height: 60px;
+   float: right;
 }
-.s2_cart {
+.s2_dropdown {
   display: inline-block;
+  /*border: solid 1px red;*/
+  margin-right: 20px;
+  text-align: center;
+  vertical-align: top;
+  /*position: relative;*/
+
+}
+
+.s2_dropbtn_container {
+    cursor: pointer;
+    /*border: solid 1px red;*/
+    /*vertical-align: top;*/
+}
+.s2_dropbtn {
+  font-size: 1.1em;
+  background-color: transparent;
+  font-family: Arial, Helvetica, sans-serif;
+  border: none;
+  cursor: pointer;
+}
+
+.s2_dropdown img {
   vertical-align: middle;
+
+}
+
+.s2_dropdown_content  {
+  display: none;
+  /*position: absolute;*/
+  background-color: white;
+    /*border: solid 1px red;*/
+   /*margin: auto;*/
+
+}
+
+.s2_dropdown_content a {
+  font-size: 1em;
+  display: block;
+  line-height: 25px;
+  color: #ffa687;
+}
+
+
+
+
+
+/*SECTION 2 SHOPPING CART*/
+.s2_cart {
+  /*display: inline-block;*/
+  vertical-align: middle;
+  /*overflow: hidden;*/
+  /*line-height: 60px;*/
+   float: right;
 }
 
 .s2_cart_top {
@@ -214,7 +283,7 @@ a:hover {
   width: 212px;
   border: solid 1px #d6d6d6;
    cursor: pointer;
-  
+   /*position: absolute;*/
 }
 
 .s2_cart_top > span {
@@ -228,15 +297,81 @@ a:hover {
 }
 .s2_cart_top > img {
   margin-top: 13px;
+  max-width: 7px;
+  max-height: 4px;
   float: right;
   line-height: 30px;
   margin-right: 10px;
   vertical-align: middle;
 }
 
+.s2_cart_list {
+  display: none;
+  /*position: absolute;*/
+  border-left: solid 1px #d6d6d6;
+  border-right: solid 1px #d6d6d6;
+border-bottom: solid 1px #d6d6d6;
+
+}
+
+.show {
+  display: block;
+}
+
+.s2_cart_item_list {
+  list-style: none;
+ 
+}
+.s2_cart_item {
+color: #d6d6d6;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.9em;
+   line-height: 25px;
+}
+.s2_cart_item:hover {
+  background-color: #f2f2f2;
+}
+
+
 .s2_cart_bottom {
+
   height: 30px;
   width: 212px;
-  border: solid 1px #d6d6d6;
-  
+  border-left: solid 1px #d6d6d6;
+  border-right: solid 1px #d6d6d6;
+border-bottom: solid 1px #d6d6d6;
+}
+
+.s2_cart_bottom > img {
+   float: left;
+   max-width: 20px;
+   max-height: 19px;
+   margin-left: 10px;
+   margin-top: 5px;
+}
+
+.s2_cart_bottom_right {
+  color: #d6d6d6;
+  /*display: inline-block;*/
+  font-family: Arial, Helvetica, sans-serif;
+  padding-top: 6px;
+  float: right;
+
+}
+.s2_cart_total_item, .s2_cart_total_price {
+  display: inline-block;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 0.9em;
+}
+.s2_cart_total_item {
+  margin-right: -5px;
+  border-right: solid 1px #d6d6d6;
+}
+
+/*section 3*/
+
+.s3 {
+  background-color:  #d9d9d9;
+  height: 500px;
 }
