--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,7 @@ a:hover {
 
 
 .s2 {
+  z-index: 10;
   background-color: white;
   /*max-width: 972px;*/
   /*opacity: 0.8;*/
@@ -501,15 +502,250 @@ border-bottom: solid 1px #d6d6d6;
   border-right: solid 1px #d6d6d6;
 }
 
-/*section 3*/
+/*SECTION 3*/
 
-.s3 {
-  /*margin-top: 104px;*/
+
+.mySlides {
+  height: 440px;
+  display:none;
+  background-position: left;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.mySlides:nth-child(1) {
+  background-image: url('../images/3-tile-bg-1.jpg');
+}
+.mySlides:nth-child(2) {
+  background-image: url('../images/3-tile-bg-2.jpg');
+}
+
+
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1200px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  height: 116px;
+  cursor: pointer;
+  position: absolute;
+  top: 162px;
+  width: 30px;
+  color: #cbcbca;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  background-color: #fefefd;
+  line-height: 116px;
+}
+.prev {
+  left: 0;
+}
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+ color: #fe926d;
+}
+
+
+.slide_text_container {
+  /*display: inline-block;*/
   /*border: solid 1px red;*/
-  background-color:  #d9d9d9;
-  height: 500px;
-  background-image: url('../images/3-tile-pic.png');
-  /*background-position: center;*/
-  /*background-size: cover;*/
+  max-width: 972px;
+  margin: auto;
+  height: 100%;
+  display: flex;
+    align-items: center;
+}
+
+.slide_text {
+  /*border: solid 1px blue;*/
+  width: 486px;
+  position: relative;
+ 
+}
+
+
+.slide_text_line1 {
+  position: absolute;
+ left: 0;
+ right: 0;
+ /*top: 43px;*/
+  display: block;
+  margin: auto;
+  font-family: 'Mr De Haviland', cursive;
+  font-size: 3em;
+  /*text-transform: uppercase;*/
+  /*background-color: #f6f3ec;*/
+  /*background-color: red;*/
+width: 100px;
+color: black;
+background-color: white;
+}
+
+#s3_slide1_text .slide_text_line1 {
+background-color: #f6f3ec;
+  color: #78645d;
+}
+#s3_slide2_text .slide_text_line1 {
+ color: #811a37;
+}
+
+
+.slide_title {
+ /*background-color:red;*/
+  margin-top: 37px;
+   font-size: 3.5em;
+   font-family: 'Roboto Condensed', sans-serif;
+    text-transform: uppercase;
+    line-height: 1.15em;
+  /*background: -webkit-linear-gradient(left, #B08AA3, #D8A19E, #F1BD95, #F3DBAF);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;*/
+}
+
+.slide_title_line1 {
+  padding-top: 30px;
+  border-top: solid 1px black;
+  display: inline-block;
+ 
+}
+
+#s3_slide1_text .slide_title_line1 {
+  border-top: solid 1px #78645d;
+  background: -webkit-linear-gradient(left, #B08AA3, #D8A19E, #F1BD95, #F3DBAF);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+#s3_slide2_text .slide_title_line1 {
+  border-top: solid 1px #811a37;
 
 }
+
+
+
+
+.slide_title_line2 {
+ 
+  border-bottom: solid 1px black;
+  display: inline-block;
+
+}
+
+#s3_slide1_text .slide_title_line2 {
+  border-bottom: solid 1px #78645d;
+  background: -webkit-linear-gradient(left, #B08AA3, #D8A19E, #F1BD95, #F3DBAF);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+#s3_slide2_text .slide_title_line2 {
+border-bottom: solid 1px #811a37;
+}
+
+
+
+.slide_title_line2 hr {
+  border: none;
+  border-bottom: solid 4px black;
+  margin-top: 7px;
+  margin-bottom: 3px;
+}
+
+#s3_slide1_text .slide_title_line2 hr {
+  border-bottom: solid 4px #78645d;
+}
+
+#s3_slide2_text .slide_title_line2 hr {
+  border-bottom: solid 4px #811a37;
+}
+
+
+.slide_text_line4 {
+ font-family: 'Roboto Condensed', sans-serif;
+    text-transform: uppercase;
+    color: black;
+    font-size: 2em;
+    font-weight: 300;
+    padding: 10px;
+}
+#s3_slide1_text .slide_text_line4 {
+  color: #78645d;
+}
+#s3_slide2_text .slide_text_line4 {
+  color: #811a37;
+}
+
+
+.s3_button {
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 1em;
+  color: white;
+  font-weight: 300;
+  font-family: 'Roboto Condensed', sans-serif;
+    text-transform: uppercase;
+  height: 54px;
+  line-height: 54px;
+  border: none;
+  background-color: #fd926d;
+  border-bottom: solid 3px #dd6b44;
+  cursor: pointer;
+}
+
+.s3_button:hover {
+  background-color: #dd6b44;
+}
+.s3_button_text {
+  vertical-align: middle;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.s3_button_image {
+  vertical-align: middle;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor:pointer;
+  height: 10px;
+  width: 10px;
+  margin: 0 10px;
+  background-color: #867a76;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+  
+}
+
+.active, .dot:hover {
+  background-color: #fe926d;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
