--- a/css/style.css
+++ b/css/style.css
@@ -861,7 +861,7 @@ border-bottom: solid 1px #811a37;
  margin-top: 46px;
  margin-bottom: 46px;
  text-align: center;
- /*font-size: 0;*/
+ font-size: 0;
 
 }
 .s5::after {
@@ -871,9 +871,10 @@ border-bottom: solid 1px #811a37;
 }
 .s5_left {
    width: 50%;
-  /*display: inline-block;*/
+  display: inline-block;
+  vertical-align: top;
   /*max-width: 485px;*/
-  float: left;
+  /*float: left;*/
   margin-top: 1px;
   margin-bottom: 1px;
 
@@ -882,12 +883,13 @@ border-bottom: solid 1px #811a37;
   /*display: table-cell;*/
    /*height: 340px;*/
    min-width: 320px;
+   max-width: 485px;
 
 
 }
 .s5_big_tile {
   background-image: url("../images/5-1.jpg");
-  background-position: left;
+  background-position: right;
   background-repeat: no-repeat;
   height: 340px;
   display: flex;
@@ -896,26 +898,122 @@ border-bottom: solid 1px #811a37;
    /*max-width: 485px;*/
 }
 .s5_big_tile_text {
-
   margin-left: auto;
+  margin-right: 20px;
+}
+
+.s5_big_tile_text_line1 {
+  font-weight: 700;
+  font-family: 'Roboto Condensed', sans-serif;
+  text-transform: uppercase;
+  color: #434141;
+  font-size: 34px;
+  line-height: 30px;
+}
+.s5_big_tile_text_line2 {
+   font-weight: 300;
+  font-family: 'Roboto Condensed', sans-serif;
+  text-transform: uppercase;
+  color: #434141;
+  font-size: 75px;
+  line-height: 66px;
+
+}
+
+.s5_big_tile_text_separator hr, .s5_big_tile_text_separator div {
+  display:inline-block;
+  vertical-align:middle;
+}
+.s5_big_tile_text_separator hr {
+ width: 40%;
+ border: none;
+ border-bottom: solid 1px#434141;
+ margin: 4px;
 }
 
 
+
+.s5_big_tile_text_separator div {
+  background-color: #434141;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 300;
+  color: white;
+  border-radius: 50%;
+  width: 33px;
+  height: 33px;
+  line-height: 33px;
+  font-size: 20px;
+
+}
+
+
+
+
+
+.s5_big_tile_text_line3 {
+  font-weight: 700;
+  font-family: 'Roboto Condensed', sans-serif;
+  text-transform: uppercase;
+  color: #4fafa0;
+   font-size: 82px;
+   line-height: 74px;
+}
 
 
 
 .s5_right {
-  min-width: 320px;
-  /*display: inline-block;*/
-  float: right;
+  vertical-align: top;
+ 
+  display: inline-block;
+  /*float: left;*/
   width: 50%;
+  min-width: 320px;
+   max-width: 485px;
   /*height: 340px;*/
-    /*margin-left: -4px;*/
+    /*margin-left: 2px;*/
 
     margin-top: 1px;
   margin-bottom: 1px;
-  background-color: palevioletred;
+  /*background-color: palevioletred;*/
 }
 .s5_medium_tile {
-  /*width: 485px;*/
+  background-image: url("../images/5-2.jpg");
+  background-position: left;
+  background-repeat: no-repeat;
+height: 169px;
+display: flex;
+  align-items: center;
+
 }
+
+.s5_medium_tile_text_container {
+  margin-left: 28px;
+  background-color: white;
+   box-shadow: 0px 4px  #4fafa0;
+    width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  position: relative;
+}
+
+.s5_medium_tile_text {
+  position: relative;
+  top: 5px;
+  left: 5px;
+  background-color: white;
+  border: solid 1px #dbeaeb;
+
+  border-radius: 50%;
+
+  width: 118px;
+  height: 118px;
+  
+
+}
+.s5_medium_tile_text_line1 {
+  font-family: 'Kaushan Script', cursive;
+    font-size: 22px;
+   line-height: 22px;
+}
+
+
